[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Map_Parts/MP-03-SideScroll_Over.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Tile_Maps/TM_03_MAIN_Extra_00.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Tile_Maps/TM_08_Map_Parts_00.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Tile_Maps/TM_04_PLATFORMS_00.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Tile_Maps/TM_07_FRONT_FX_00.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Tile_Maps/TM_12_Campaign_Map_Parts_00.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Tile_Maps/TM_10_Player_NPC_Spawn_00.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Tile_Maps/TM_03_MAIN_00.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Tile_Maps/TM_05_MAIN_FX_00.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Tile_Maps/TM_09_Item_Spawn_00.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Tile_Maps/TM_02_BACK_FX_00.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Tile_Maps/TM_06_FRONT_00.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Tile_Maps/TM_01_BACK_Extra_00.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Tile_Maps/TM_11_Areas_00.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Tile_Maps/TM_01_BACK_00.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scripts/Maps/Campaign/Map_00_Campaign_Template.gd" type="Script" id=16]

[node name="Map_00_Template" type="Node2D"]
script = ExtResource( 16 )
next_map_00_splash_title = "top_text its 0"
next_map_02 = 2

[node name="TM_01_BACK_00" parent="." instance=ExtResource( 15 )]

[node name="TM_01_BACK_Extra_00" parent="." instance=ExtResource( 13 )]

[node name="TM_02_BACK_FX_00" parent="." instance=ExtResource( 11 )]

[node name="TM_03_MAIN_00" parent="." instance=ExtResource( 8 )]
tile_data = PoolIntArray( -131077, 15, 0, -131076, 15, 1, -131075, 15, 1, -131074, 15, 1, -131073, 15, 1, -196608, 15, 1, -196607, 15, 1, -196606, 15, 1, -196605, 15, 1, -196604, 15, 1, -196603, 15, 1, -196602, 15, 1, -196601, 15, 1, -196600, 15, 1, -196599, 15, 1, -196598, 15, 1, -196597, 15, 1, -196596, 15, 1, -196595, 15, 1, -196594, 15, 1, -196593, 15, 1, -196592, 15, 1, -196591, 15, 1, -196590, 15, 1, -196589, 15, 1, -196588, 15, 1, -196587, 15, 1, -196586, 15, 1, -196585, 15, 1, -196584, 15, 1, -196583, 15, 1, -196582, 15, 1, -196581, 15, 1, -196580, 15, 1, -196579, 15, 1, -196578, 15, 1, -196577, 15, 1, -196576, 15, 1, -196575, 15, 1, -196574, 15, 1, -196573, 15, 1, -196572, 15, 1, -196571, 15, 1, -196570, 15, 1, -196569, 15, 1, -196568, 15, 1, -196567, 15, 1, -196566, 15, 1, -196565, 15, 1, -196564, 15, 1, -196563, 15, 1, -196562, 15, 1, -196561, 15, 1, -196560, 15, 1, -196559, 15, 1, -196558, 15, 1, -196557, 15, 1, -196556, 15, 1, -196555, 15, 1, -196554, 15, 1, -196553, 15, 1, -196552, 15, 1, -196551, 15, 1, -196550, 15, 1, -196549, 15, 1, -196548, 15, 1, -196547, 15, 1, -196546, 15, 1, -196545, 15, 1, -196544, 15, 2, -65541, 15, 65536, -65540, 15, 65537, -65539, 15, 65537, -65538, 15, 65537, -65537, 15, 65537, -131072, 15, 65537, -131071, 15, 65537, -131070, 15, 65537, -131069, 15, 65537, -131068, 15, 65537, -131067, 15, 65537, -131066, 15, 65537, -131065, 15, 65537, -131064, 15, 65537, -131063, 15, 65537, -131062, 15, 65537, -131061, 15, 65537, -131060, 15, 65537, -131059, 15, 65537, -131058, 15, 65537, -131057, 15, 65537, -131056, 15, 65537, -131055, 15, 65537, -131054, 15, 65537, -131053, 15, 65537, -131052, 15, 65537, -131051, 15, 65537, -131050, 15, 65537, -131049, 15, 65537, -131048, 15, 65537, -131047, 15, 65537, -131046, 15, 65537, -131045, 15, 65537, -131044, 15, 65537, -131043, 15, 65537, -131042, 15, 65537, -131041, 15, 65537, -131040, 15, 65537, -131039, 15, 65537, -131038, 15, 65537, -131037, 15, 65537, -131036, 15, 65537, -131035, 15, 65537, -131034, 15, 65537, -131033, 15, 65537, -131032, 15, 65537, -131031, 15, 65537, -131030, 15, 65537, -131029, 15, 65537, -131028, 15, 65537, -131027, 15, 65537, -131026, 15, 65537, -131025, 15, 65537, -131024, 15, 65537, -131023, 15, 65537, -131022, 15, 65537, -131021, 15, 65537, -131020, 15, 65537, -131019, 15, 65537, -131018, 15, 65537, -131017, 15, 65537, -131016, 15, 65537, -131015, 15, 65537, -131014, 15, 65537, -131013, 15, 65537, -131012, 15, 65537, -131011, 15, 65537, -131010, 15, 65537, -131009, 15, 65537, -131008, 15, 65538, -5, 15, 65536, -4, 15, 65537, -3, 15, 65537, -2, 15, 65537, -1, 15, 65537, -65536, 15, 65537, -65535, 15, 65537, -65534, 15, 65537, -65533, 15, 65537, -65532, 15, 65537, -65531, 15, 65537, -65530, 15, 65537, -65529, 15, 65537, -65528, 15, 65537, -65527, 15, 65537, -65526, 15, 65537, -65525, 15, 65537, -65524, 15, 65537, -65523, 15, 65537, -65522, 15, 65537, -65521, 15, 65537, -65520, 15, 65537, -65519, 15, 65537, -65518, 15, 65537, -65517, 15, 65537, -65516, 15, 65537, -65515, 15, 65537, -65514, 15, 65537, -65513, 15, 65537, -65512, 15, 65537, -65511, 15, 65537, -65510, 15, 65537, -65509, 15, 65537, -65508, 15, 65537, -65507, 15, 65537, -65506, 15, 65537, -65505, 15, 65537, -65504, 15, 65537, -65503, 15, 65537, -65502, 15, 65537, -65501, 15, 65537, -65500, 15, 65537, -65499, 15, 65537, -65498, 15, 65537, -65497, 15, 65537, -65496, 15, 65537, -65495, 15, 65537, -65494, 15, 65537, -65493, 15, 65537, -65492, 15, 65537, -65491, 15, 65537, -65490, 15, 65537, -65489, 15, 65537, -65488, 15, 65537, -65487, 15, 65537, -65486, 15, 65537, -65485, 15, 65537, -65484, 15, 65537, -65483, 15, 65537, -65482, 15, 65537, -65481, 15, 65537, -65480, 15, 65537, -65479, 15, 65537, -65478, 15, 65537, -65477, 15, 65537, -65476, 15, 65537, -65475, 15, 65537, -65474, 15, 65537, -65473, 15, 65537, -65472, 15, 65538, 65531, 15, 65536, 65532, 15, 65537, 65533, 15, 65537, 65534, 15, 65537, 65535, 15, 65537, 0, 15, 65541, 1, 15, 131073, 2, 15, 131073, 3, 15, 131073, 4, 15, 131073, 5, 15, 131073, 6, 15, 131073, 7, 15, 131073, 8, 15, 131073, 9, 15, 131073, 10, 15, 131073, 11, 15, 131073, 12, 15, 131073, 13, 15, 131073, 14, 15, 131073, 15, 15, 131073, 16, 15, 131073, 17, 15, 131073, 18, 15, 131073, 19, 15, 131073, 20, 15, 131073, 21, 15, 131073, 22, 15, 131073, 23, 15, 131073, 24, 15, 131073, 25, 15, 131073, 26, 15, 131073, 27, 15, 131073, 28, 15, 131073, 29, 15, 131073, 30, 15, 131073, 31, 15, 131073, 32, 15, 131073, 33, 15, 131073, 34, 15, 131073, 35, 15, 131073, 36, 15, 131073, 37, 15, 131073, 38, 15, 131073, 39, 15, 131073, 40, 15, 131073, 41, 15, 131073, 42, 15, 131073, 43, 15, 131073, 44, 15, 131073, 45, 15, 131073, 46, 15, 131073, 47, 15, 131073, 48, 15, 131073, 49, 15, 131073, 50, 15, 131073, 51, 15, 131073, 52, 15, 131073, 53, 15, 131073, 54, 15, 131073, 55, 15, 131073, 56, 15, 131073, 57, 15, 131073, 58, 15, 131073, 59, 15, 65542, 60, 15, 65537, 61, 15, 65537, 62, 15, 65537, 63, 15, 65537, 64, 15, 65538, 131067, 15, 65536, 131068, 15, 65537, 131069, 15, 65537, 131070, 15, 65537, 131071, 15, 65537, 65536, 15, 65538, 65595, 15, 65536, 65596, 15, 65537, 65597, 15, 65537, 65598, 15, 65537, 65599, 15, 65537, 65600, 15, 65538, 196603, 15, 65536, 196604, 15, 65537, 196605, 15, 65537, 196606, 15, 65537, 196607, 15, 65537, 131072, 15, 65538, 131131, 15, 65536, 131132, 15, 65537, 131133, 15, 65537, 131134, 15, 65537, 131135, 15, 65537, 131136, 15, 65538, 262139, 15, 65536, 262140, 15, 65537, 262141, 15, 65537, 262142, 15, 65537, 262143, 15, 65537, 196608, 15, 65538, 196667, 15, 65536, 196668, 15, 65537, 196669, 15, 65537, 196670, 15, 65537, 196671, 15, 65537, 196672, 15, 65538, 327675, 15, 65536, 327676, 15, 65537, 327677, 15, 65537, 327678, 15, 65537, 327679, 15, 65537, 262144, 15, 65538, 262203, 15, 65536, 262204, 15, 65537, 262205, 15, 65537, 262206, 15, 65537, 262207, 15, 65537, 262208, 15, 65538, 393211, 15, 65536, 393212, 15, 65537, 393213, 15, 65537, 393214, 15, 65537, 393215, 15, 65537, 327680, 15, 65538, 327739, 15, 65536, 327740, 15, 65537, 327741, 15, 65537, 327742, 15, 65537, 327743, 15, 65537, 327744, 15, 65538, 458747, 15, 65536, 458748, 15, 65537, 458749, 15, 65537, 458750, 15, 65537, 458751, 15, 65537, 393216, 15, 65538, 393275, 15, 65536, 393276, 15, 65537, 393277, 15, 65537, 393278, 15, 65537, 393279, 15, 65537, 393280, 15, 65538, 524283, 15, 65536, 524284, 15, 65537, 524285, 15, 65537, 524286, 15, 65537, 524287, 15, 65537, 458752, 15, 65538, 458811, 15, 65536, 458812, 15, 65537, 458813, 15, 65537, 458814, 15, 65537, 458815, 15, 65537, 458816, 15, 65538, 589819, 15, 65536, 589820, 15, 65537, 589821, 15, 65537, 589822, 15, 65537, 589823, 15, 65537, 524288, 15, 65538, 524347, 15, 65536, 524348, 15, 65537, 524349, 15, 65537, 524350, 15, 65537, 524351, 15, 65537, 524352, 15, 65538, 655355, 15, 65536, 655356, 15, 65537, 655357, 15, 65537, 655358, 15, 65537, 655359, 15, 65537, 589824, 15, 65538, 589883, 15, 65536, 589884, 15, 65537, 589885, 15, 65537, 589886, 15, 65537, 589887, 15, 65537, 589888, 15, 65538, 720891, 15, 65536, 720892, 15, 65537, 720893, 15, 65537, 720894, 15, 65537, 720895, 15, 65537, 655360, 15, 65538, 655419, 15, 65536, 655420, 15, 65537, 655421, 15, 65537, 655422, 15, 65537, 655423, 15, 65537, 655424, 15, 65538, 786427, 15, 65536, 786428, 15, 65537, 786429, 15, 65537, 786430, 15, 65537, 786431, 15, 65537, 720896, 15, 65538, 720955, 15, 65536, 720956, 15, 65537, 720957, 15, 65537, 720958, 15, 65537, 720959, 15, 65537, 720960, 15, 65538, 851963, 15, 65536, 851964, 15, 65537, 851965, 15, 65537, 851966, 15, 65537, 851967, 15, 65537, 786432, 15, 65538, 786491, 15, 65536, 786492, 15, 65537, 786493, 15, 65537, 786494, 15, 65537, 786495, 15, 65537, 786496, 15, 65538, 917499, 15, 65536, 917500, 15, 65537, 917501, 15, 65537, 917502, 15, 65537, 917503, 15, 65537, 851968, 15, 65538, 852027, 15, 65536, 852028, 15, 65537, 852029, 15, 65537, 852030, 15, 65537, 852031, 15, 65537, 852032, 15, 65538, 983035, 15, 65536, 983036, 15, 65537, 983037, 15, 65537, 983038, 15, 65537, 983039, 15, 65537, 917504, 15, 65538, 917563, 15, 65536, 917564, 15, 65537, 917565, 15, 65537, 917566, 15, 65537, 917567, 15, 65537, 917568, 15, 65538, 1048571, 15, 65536, 1048572, 15, 65537, 1048573, 15, 65537, 1048574, 15, 65537, 1048575, 15, 65537, 983040, 15, 65538, 983099, 15, 65536, 983100, 15, 65537, 983101, 15, 65537, 983102, 15, 65537, 983103, 15, 65537, 983104, 15, 65538, 1114107, 15, 65536, 1114108, 15, 65537, 1114109, 15, 65537, 1114110, 15, 65537, 1114111, 15, 65537, 1048576, 15, 65538, 1048635, 15, 65536, 1048636, 15, 65537, 1048637, 15, 65537, 1048638, 15, 65537, 1048639, 15, 65537, 1048640, 15, 65538, 1179643, 15, 65536, 1179644, 15, 65537, 1179645, 15, 65537, 1179646, 15, 65537, 1179647, 15, 65537, 1114112, 15, 65538, 1114171, 15, 65536, 1114172, 15, 65537, 1114173, 15, 65537, 1114174, 15, 65537, 1114175, 15, 65537, 1114176, 15, 65538, 1245179, 15, 65536, 1245180, 15, 65537, 1245181, 15, 65537, 1245182, 15, 65537, 1245183, 15, 65537, 1179648, 15, 65538, 1179707, 15, 65536, 1179708, 15, 65537, 1179709, 15, 65537, 1179710, 15, 65537, 1179711, 15, 65537, 1179712, 15, 65538, 1310715, 15, 65536, 1310716, 15, 65537, 1310717, 15, 65537, 1310718, 15, 65537, 1310719, 15, 65537, 1245184, 15, 65538, 1245243, 15, 65536, 1245244, 15, 65537, 1245245, 15, 65537, 1245246, 15, 65537, 1245247, 15, 65537, 1245248, 15, 65538, 1376251, 15, 65536, 1376252, 15, 65537, 1376253, 15, 65537, 1376254, 15, 65537, 1376255, 15, 65537, 1310720, 15, 65538, 1310779, 15, 65536, 1310780, 15, 65537, 1310781, 15, 65537, 1310782, 15, 65537, 1310783, 15, 65537, 1310784, 15, 65538, 1441787, 15, 65536, 1441788, 15, 65537, 1441789, 15, 65537, 1441790, 15, 65537, 1441791, 15, 65537, 1376256, 15, 65538, 1376315, 15, 65536, 1376316, 15, 65537, 1376317, 15, 65537, 1376318, 15, 65537, 1376319, 15, 65537, 1376320, 15, 65538, 1507323, 15, 65536, 1507324, 15, 65537, 1507325, 15, 65537, 1507326, 15, 65537, 1507327, 15, 65537, 1441792, 15, 65538, 1441851, 15, 65536, 1441852, 15, 65537, 1441853, 15, 65537, 1441854, 15, 65537, 1441855, 15, 65537, 1441856, 15, 65538, 1572859, 15, 65536, 1572860, 15, 65537, 1572861, 15, 65537, 1572862, 15, 65537, 1572863, 15, 65537, 1507328, 15, 65538, 1507387, 15, 65536, 1507388, 15, 65537, 1507389, 15, 65537, 1507390, 15, 65537, 1507391, 15, 65537, 1507392, 15, 65538, 1638395, 15, 65536, 1638396, 15, 65537, 1638397, 15, 65537, 1638398, 15, 65537, 1638399, 15, 65537, 1572864, 15, 65538, 1572923, 15, 65536, 1572924, 15, 65537, 1572925, 15, 65537, 1572926, 15, 65537, 1572927, 15, 65537, 1572928, 15, 65538, 1703931, 15, 65536, 1703932, 15, 65537, 1703933, 15, 65537, 1703934, 15, 65537, 1703935, 15, 65537, 1638400, 15, 65538, 1638459, 15, 65536, 1638460, 15, 65537, 1638461, 15, 65537, 1638462, 15, 65537, 1638463, 15, 65537, 1638464, 15, 65538, 1769467, 15, 65536, 1769468, 15, 65537, 1769469, 15, 65537, 1769470, 15, 65537, 1769471, 15, 65537, 1703936, 15, 65538, 1703995, 15, 65536, 1703996, 15, 65537, 1703997, 15, 65537, 1703998, 15, 65537, 1703999, 15, 65537, 1704000, 15, 65538, 1835003, 15, 65536, 1835004, 15, 65537, 1835005, 15, 65537, 1835006, 15, 65537, 1835007, 15, 65537, 1769472, 15, 65538, 1769531, 15, 65536, 1769532, 15, 65537, 1769533, 15, 65537, 1769534, 15, 65537, 1769535, 15, 65537, 1769536, 15, 65538, 1900539, 15, 65536, 1900540, 15, 65537, 1900541, 15, 65537, 1900542, 15, 65537, 1900543, 15, 65537, 1835008, 15, 65538, 1835067, 15, 65536, 1835068, 15, 65537, 1835069, 15, 65537, 1835070, 15, 65537, 1835071, 15, 65537, 1835072, 15, 65538, 1966075, 15, 65536, 1966076, 15, 65537, 1966077, 15, 65537, 1966078, 15, 65537, 1966079, 15, 65537, 1900544, 15, 65538, 1900603, 15, 65536, 1900604, 15, 65537, 1900605, 15, 65537, 1900606, 15, 65537, 1900607, 15, 65537, 1900608, 15, 65538, 2031611, 15, 65536, 2031612, 15, 65537, 2031613, 15, 65537, 2031614, 15, 65537, 2031615, 15, 65537, 1966080, 15, 131077, 1966081, 15, 1, 1966082, 15, 1, 1966083, 15, 1, 1966084, 15, 1, 1966085, 15, 1, 1966086, 15, 1, 1966087, 15, 1, 1966088, 15, 1, 1966089, 15, 1, 1966090, 15, 1, 1966091, 15, 1, 1966092, 15, 1, 1966093, 15, 1, 1966094, 15, 1, 1966095, 15, 1, 1966096, 15, 1, 1966097, 15, 1, 1966098, 15, 1, 1966099, 15, 1, 1966100, 15, 1, 1966101, 15, 1, 1966102, 15, 1, 1966103, 15, 1, 1966104, 15, 1, 1966105, 15, 1, 1966106, 15, 1, 1966107, 15, 1, 1966108, 15, 1, 1966109, 15, 1, 1966110, 15, 1, 1966111, 15, 1, 1966112, 15, 1, 1966113, 15, 1, 1966114, 15, 1, 1966115, 15, 1, 1966116, 15, 1, 1966117, 15, 1, 1966118, 15, 1, 1966119, 15, 1, 1966120, 15, 1, 1966121, 15, 1, 1966122, 15, 1, 1966123, 15, 1, 1966124, 15, 1, 1966125, 15, 1, 1966126, 15, 1, 1966127, 15, 1, 1966128, 15, 1, 1966129, 15, 1, 1966130, 15, 1, 1966131, 15, 1, 1966132, 15, 1, 1966133, 15, 1, 1966134, 15, 1, 1966135, 15, 1, 1966136, 15, 1, 1966137, 15, 1, 1966138, 15, 1, 1966139, 15, 131078, 1966140, 15, 65537, 1966141, 15, 65537, 1966142, 15, 65537, 1966143, 15, 65537, 1966144, 15, 65538, 2097147, 15, 65536, 2097148, 15, 65537, 2097149, 15, 65537, 2097150, 15, 65537, 2097151, 15, 65537, 2031616, 15, 65537, 2031617, 15, 65537, 2031618, 15, 65537, 2031619, 15, 65537, 2031620, 15, 65537, 2031621, 15, 65537, 2031622, 15, 65537, 2031623, 15, 65537, 2031624, 15, 65537, 2031625, 15, 65537, 2031626, 15, 65537, 2031627, 15, 65537, 2031628, 15, 65537, 2031629, 15, 65537, 2031630, 15, 65537, 2031631, 15, 65537, 2031632, 15, 65537, 2031633, 15, 65537, 2031634, 15, 65537, 2031635, 15, 65537, 2031636, 15, 65537, 2031637, 15, 65537, 2031638, 15, 65537, 2031639, 15, 65537, 2031640, 15, 65537, 2031641, 15, 65537, 2031642, 15, 65537, 2031643, 15, 65537, 2031644, 15, 65537, 2031645, 15, 65537, 2031646, 15, 65537, 2031647, 15, 65537, 2031648, 15, 65537, 2031649, 15, 65537, 2031650, 15, 65537, 2031651, 15, 65537, 2031652, 15, 65537, 2031653, 15, 65537, 2031654, 15, 65537, 2031655, 15, 65537, 2031656, 15, 65537, 2031657, 15, 65537, 2031658, 15, 65537, 2031659, 15, 65537, 2031660, 15, 65537, 2031661, 15, 65537, 2031662, 15, 65537, 2031663, 15, 65537, 2031664, 15, 65537, 2031665, 15, 65537, 2031666, 15, 65537, 2031667, 15, 65537, 2031668, 15, 65537, 2031669, 15, 65537, 2031670, 15, 65537, 2031671, 15, 65537, 2031672, 15, 65537, 2031673, 15, 65537, 2031674, 15, 65537, 2031675, 15, 65537, 2031676, 15, 65537, 2031677, 15, 65537, 2031678, 15, 65537, 2031679, 15, 65537, 2031680, 15, 65538, 2162683, 15, 65536, 2162684, 15, 65537, 2162685, 15, 65537, 2162686, 15, 65537, 2162687, 15, 65537, 2097152, 15, 65537, 2097153, 15, 65537, 2097154, 15, 65537, 2097155, 15, 65537, 2097156, 15, 65537, 2097157, 15, 65537, 2097158, 15, 65537, 2097159, 15, 65537, 2097160, 15, 65537, 2097161, 15, 65537, 2097162, 15, 65537, 2097163, 15, 65537, 2097164, 15, 65537, 2097165, 15, 65537, 2097166, 15, 65537, 2097167, 15, 65537, 2097168, 15, 65537, 2097169, 15, 65537, 2097170, 15, 65537, 2097171, 15, 65537, 2097172, 15, 65537, 2097173, 15, 65537, 2097174, 15, 65537, 2097175, 15, 65537, 2097176, 15, 65537, 2097177, 15, 65537, 2097178, 15, 65537, 2097179, 15, 65537, 2097180, 15, 65537, 2097181, 15, 65537, 2097182, 15, 65537, 2097183, 15, 65537, 2097184, 15, 65537, 2097185, 15, 65537, 2097186, 15, 65537, 2097187, 15, 65537, 2097188, 15, 65537, 2097189, 15, 65537, 2097190, 15, 65537, 2097191, 15, 65537, 2097192, 15, 65537, 2097193, 15, 65537, 2097194, 15, 65537, 2097195, 15, 65537, 2097196, 15, 65537, 2097197, 15, 65537, 2097198, 15, 65537, 2097199, 15, 65537, 2097200, 15, 65537, 2097201, 15, 65537, 2097202, 15, 65537, 2097203, 15, 65537, 2097204, 15, 65537, 2097205, 15, 65537, 2097206, 15, 65537, 2097207, 15, 65537, 2097208, 15, 65537, 2097209, 15, 65537, 2097210, 15, 65537, 2097211, 15, 65537, 2097212, 15, 65537, 2097213, 15, 65537, 2097214, 15, 65537, 2097215, 15, 65537, 2097216, 15, 65538, 2228219, 15, 131072, 2228220, 15, 131073, 2228221, 15, 131073, 2228222, 15, 131073, 2228223, 15, 131073, 2162688, 15, 131073, 2162689, 15, 131073, 2162690, 15, 131073, 2162691, 15, 131073, 2162692, 15, 131073, 2162693, 15, 131073, 2162694, 15, 131073, 2162695, 15, 131073, 2162696, 15, 131073, 2162697, 15, 131073, 2162698, 15, 131073, 2162699, 15, 131073, 2162700, 15, 131073, 2162701, 15, 131073, 2162702, 15, 131073, 2162703, 15, 131073, 2162704, 15, 131073, 2162705, 15, 131073, 2162706, 15, 131073, 2162707, 15, 131073, 2162708, 15, 131073, 2162709, 15, 131073, 2162710, 15, 131073, 2162711, 15, 131073, 2162712, 15, 131073, 2162713, 15, 131073, 2162714, 15, 131073, 2162715, 15, 131073, 2162716, 15, 131073, 2162717, 15, 131073, 2162718, 15, 131073, 2162719, 15, 131073, 2162720, 15, 131073, 2162721, 15, 131073, 2162722, 15, 131073, 2162723, 15, 131073, 2162724, 15, 131073, 2162725, 15, 131073, 2162726, 15, 131073, 2162727, 15, 131073, 2162728, 15, 131073, 2162729, 15, 131073, 2162730, 15, 131073, 2162731, 15, 131073, 2162732, 15, 131073, 2162733, 15, 131073, 2162734, 15, 131073, 2162735, 15, 131073, 2162736, 15, 131073, 2162737, 15, 131073, 2162738, 15, 131073, 2162739, 15, 131073, 2162740, 15, 131073, 2162741, 15, 131073, 2162742, 15, 131073, 2162743, 15, 131073, 2162744, 15, 131073, 2162745, 15, 131073, 2162746, 15, 131073, 2162747, 15, 131073, 2162748, 15, 131073, 2162749, 15, 131073, 2162750, 15, 131073, 2162751, 15, 131073, 2162752, 15, 131074 )

[node name="TM_03_MAIN_Extra_00" parent="." instance=ExtResource( 2 )]

[node name="TM_04_PLATFORMS_00" parent="." instance=ExtResource( 4 )]

[node name="TM_05_MAIN_FX_00" parent="." instance=ExtResource( 9 )]
collision_layer = 8
collision_mask = 8

[node name="TM_06_FRONT_00" parent="." instance=ExtResource( 12 )]

[node name="TM_07_FRONT_FX_00" parent="." instance=ExtResource( 5 )]

[node name="TM_08_Map_Parts_00" parent="." instance=ExtResource( 3 )]

[node name="TM_09_Item_Spawn_00" parent="." instance=ExtResource( 10 )]

[node name="TM_10_Player_NPC_Spawn_00" parent="." instance=ExtResource( 7 )]
tile_data = PoolIntArray( 1900547, 0, 0, 1900548, 0, 0, 1900549, 0, 0, 1900550, 0, 0, 1900551, 0, 0, 1900552, 0, 0, 1900553, 0, 0, 1900554, 0, 0 )

[node name="TM_11_Areas_00" parent="." instance=ExtResource( 14 )]
tile_data = PoolIntArray( -983042, 0, 0, -983041, 0, 0, -1048576, 0, 0, -1048575, 0, 0, -1048574, 0, 0, -1048573, 0, 0, -1048572, 0, 0, -1048571, 0, 0, -1048570, 0, 0, -1048569, 0, 0, -1048568, 0, 0, -1048567, 0, 0, -1048566, 0, 0, -1048565, 0, 0, -1048564, 0, 0, -1048563, 0, 0, -1048562, 0, 0, -1048561, 0, 0, -1048560, 0, 0, -1048559, 0, 0, -1048558, 0, 0, -1048557, 0, 0, -1048556, 0, 0, -1048555, 0, 0, -1048554, 0, 0, -1048553, 0, 0, -1048552, 0, 0, -1048551, 0, 0, -1048550, 0, 0, -1048549, 0, 0, -1048548, 0, 0, -1048547, 0, 0, -1048546, 0, 0, -1048545, 0, 0, -1048544, 0, 0, -1048543, 0, 0, -1048542, 0, 0, -1048541, 0, 0, -1048540, 0, 0, -1048539, 0, 0, -1048538, 0, 0, -1048537, 0, 0, -1048536, 0, 0, -1048535, 0, 0, -1048534, 0, 0, -1048533, 0, 0, -1048532, 0, 0, -1048531, 0, 0, -1048530, 0, 0, -1048529, 0, 0, -1048528, 0, 0, -1048527, 0, 0, -1048526, 0, 0, -1048525, 0, 0, -1048524, 0, 0, -1048523, 0, 0, -1048522, 0, 0, -1048521, 0, 0, -1048520, 0, 0, -1048519, 0, 0, -1048518, 0, 0, -1048517, 0, 0, -1048516, 0, 0, -1048515, 0, 0, 2293758, 0, 0, 2293759, 0, 0, 2228224, 0, 0, 2228225, 0, 0, 2228226, 0, 0, 2228227, 0, 0, 2228228, 0, 0, 2228229, 0, 0, 2228230, 0, 0, 2228231, 0, 0, 2228232, 0, 0, 2228233, 0, 0, 2228234, 0, 0, 2228235, 0, 0, 2228236, 0, 0, 2228237, 0, 0, 2228238, 0, 0, 2228239, 0, 0, 2228240, 0, 0, 2228241, 0, 0, 2228242, 0, 0, 2228243, 0, 0, 2228244, 0, 0, 2228245, 0, 0, 2228246, 0, 0, 2228247, 0, 0, 2228248, 0, 0, 2228249, 0, 0, 2228250, 0, 0, 2228251, 0, 0, 2228252, 0, 0, 2228253, 0, 0, 2228254, 0, 0, 2228255, 0, 0, 2228256, 0, 0, 2228257, 0, 0, 2228258, 0, 0, 2228259, 0, 0, 2228260, 0, 0, 2228261, 0, 0, 2228262, 0, 0, 2228263, 0, 0, 2228264, 0, 0, 2228265, 0, 0, 2228266, 0, 0, 2228267, 0, 0, 2228268, 0, 0, 2228269, 0, 0, 2228270, 0, 0, 2228271, 0, 0, 2228272, 0, 0, 2228273, 0, 0, 2228274, 0, 0, 2228275, 0, 0, 2228276, 0, 0, 2228277, 0, 0, 2228278, 0, 0, 2228279, 0, 0, 2228280, 0, 0, 2228281, 0, 0, 2228282, 0, 0, 2228283, 0, 0, 2228284, 0, 0, 2228285, 0, 0 )

[node name="TM_12_Campaign_Map_Parts_00" parent="." instance=ExtResource( 6 )]
tile_data = PoolIntArray( 1900560, 0, 0, 1900564, 1, 0, 1900568, 2, 0 )

[node name="Player_spawns" type="Node2D" parent="."]

[node name="Power_Ups" type="Node2D" parent="."]

[node name="Map_Parts" type="Node2D" parent="." groups=["map_part"]]

[node name="MP-03-SideScroll_Over" parent="Map_Parts" instance=ExtResource( 1 )]
